--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
 
 
-    <title>Hello World!</title>
+    <title>Giới thiệu tổ</title>
    <div class="container-3D">
 
   <input type="radio" id="swap-left-front" name="swapper" value="swap-left">
